--- a/Automated/ansible/site-vm.yaml
+++ b/Automated/ansible/site-vm.yaml
@@ -11,8 +11,8 @@
 - import_playbook: playbooks/20-checkout-and-build-fabric.yaml
   when: 'plays=="all" or ("checkoutfabric" in plays)'
 
-- import_playbook: playbooks/30-checkout-caliper-benchmarks.yaml
-  when: 'plays=="all" or ("checkoutbench" in plays)'
+- import_playbook: playbooks/30-checkout-chaincode.yaml
+  when: 'plays=="all" or ("checkoutchain" in plays)'
 
 - import_playbook: playbooks/40-generate-crypto-fabric.yaml
   when: 'plays=="all" or ("gencrypto" in plays)'
