Add support for IOU FSC Sample
Core file generation for FSC nodes currenty based on unmerged commit

Signed-off-by: dave <d_kelsey@uk.ibm.com>

--- a/Automated/ansible/ansible.cfg
+++ b/Automated/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 
-inventory = ./inventory/docker/hosts.yaml
+inventory = ./inventory/docker/hosts-fsc-iou.yaml
 #inventory = ./inventory/vm/hosts.yaml
 roles_path = ./roles:./playbooks/roles
 
