--- a/Automated/ansible/playbooks/40-generate-crypto-fabric.yaml
+++ b/Automated/ansible/playbooks/40-generate-crypto-fabric.yaml
@@ -1,7 +1,7 @@
 #!/usr/bin/env ansible-playbook
 
 - name: Create ordererOrgs and peerOrgs maps to be used for following plays
-  hosts: clients
+  hosts: client0
   remote_user: root
 
   roles:
@@ -32,13 +32,3 @@
         chdir: /root
       when: 'inventory_hostname == "client0"'
 
-# Moved to a separate playbook
-#- name: Copy Crypto materials from client0 to all peers, orderers and other clients (caliper workers use path references, so need to copy as well as cannot embed)
-#  hosts: clients:peers:orderers
-#  remote_user: root
-
-#  roles:
-#    - role: util/copy_remote_to_remotes
-#      src: /root/crypto-config
-#      src_hostname: 'client0'
-#      dest_groups: [clients, peers, orderers]
