WIP of fungible sample deployment
Signed-off-by: Dave Kelsey <d_kelsey@uk.ibm.com>

--- a/Automated/ansible/ansible.cfg
+++ b/Automated/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 
-inventory = ./inventory/docker/hosts-fsc-atsa.yaml
+inventory = ./inventory/docker/hosts-token-fungible.yaml
+#inventory = ./inventory/docker/hosts-fsc-atsa.yaml
 #inventory = ./inventory/docker/hosts-fsc-iou.yaml
 #inventory = ./inventory/vm/hosts.yaml
 roles_path = ./roles:./playbooks/roles
