--- a/Automated/ansible/playbooks/52-generate-fsc-core.yaml
+++ b/Automated/ansible/playbooks/52-generate-fsc-core.yaml
@@ -9,14 +9,14 @@
 
   tasks:
     - name: find bootstrap
-      set_fact: 
+      set_fact:
          #https://stackoverflow.com/questions/67029581/ansible-how-to-select-hosts-based-on-certain-attributes-and-use-their-ip-address
          __fscnode_bootstrap_role: "{{ hostvars | dict2items | selectattr('value.is_bootstrap', 'defined') | map(attribute='value.group_names') | list | first | difference('fsc') | first }}"
          #__fscnode_bootstrap: "{{ hostvars | dict2items | selectattr('value.is_bootstrap', 'defined') | map(attribute='value.group_names') | list | first | difference('fsc') | first }}"
 
     - name: Generate Core file
       vars:
-          # eg lender|borrower|approver & fsc (first to convert 1 entry list to a single value)
+          # eg issuer|auditor|alice|bob|charlie|lender|borrower|approver & fsc (first to convert 1 entry list to a single value)
           # these templates run on the individual machines
         __fscnode_role: '{{ group_names | difference("fsc") | first }}'
         __fscnode_name: '{{ inventory_hostname }}'
