--- a/Automated/ansible/site-init.yaml
+++ b/Automated/ansible/site-init.yaml
@@ -1,30 +1,41 @@
 #!/usr/bin/env ansible-playbook
 - import_playbook: playbooks/10-common-prereqs.yaml
-  when: 'plays=="all" or ("prereqs" in plays)'
+
+- import_playbook: playbooks/10-common-prereqs.yaml
+
+- import_playbook: playbooks/13-token-prereqs.yaml
 
 - import_playbook: playbooks/20-checkout-and-build-fabric.yaml
-  when: 'plays=="all" or ("checkoutfabric" in plays)'
 
 - import_playbook: playbooks/22-checkout-and-build-idemixgen.yaml
-  when: 'plays=="all" or ("checkoutfabric" in plays)'
+  when: 'plays=="fungible" or plays=="atsa"'
 
 - import_playbook: playbooks/25-checkout-and-build-fsc-nodes.yaml
-  when: 'plays=="all" or ("checkoutfsc" in plays)'
 
 - import_playbook: playbooks/30-checkout-chaincode.yaml
-  when: 'plays=="all" or ("checkoutfsc" in plays)'
 
 - import_playbook: playbooks/40-generate-crypto-fabric.yaml
-  when: 'plays=="all" or ("gencrypto" in plays)'
 
 - import_playbook: playbooks/41-generate-crypto-fsc.yaml
-  when: 'plays=="all" or ("genfsccrypto" in plays)'
 
 - import_playbook: playbooks/42-generate-crypto-idemix.yaml
-  when: 'plays=="all" or ("genfsccrypto" in plays)'
+  when: 'plays=="fungible" or plays=="atsa"'
+
+- import_playbook: playbooks/43-generate-crypto-token.yaml
+  when: 'plays=="fungible"'
 
 - import_playbook: playbooks/50-generate-channel.yaml
-  when: 'plays=="all" or ("genchan" in plays)'
 
 - import_playbook: playbooks/52-generate-fsc-core.yaml
-  when: 'plays=="all" or ("genfsccore" in plays)'
+
+- import_playbook: playbooks/53-append-token-core.yaml
+  when: 'plays=="fungible"'
+
+- import_playbook: playbooks/55-restart-fabric-nodes.yaml
+
+- import_playbook: playbooks/60-create-channels.yaml
+
+- import_playbook: playbooks/65-create-anchors.yaml
+
+- import_playbook: playbooks/67-pp-into-chaincode.yaml
+  when: 'plays=="fungible"'
