--- a/Automated/ansible/site.yaml
+++ b/Automated/ansible/site.yaml
@@ -1,40 +1,58 @@
 #!/usr/bin/env ansible-playbook
-- import_playbook: playbooks/5-docker-prereqs.yaml
-  when: 'plays=="all" or ("docker" in plays)'
+
+# a single file to run all the playbooks necessary to stand up the required network
+
+# Initialise either a fabric, atsa, iou or fungible network
+# -e "plays=<type>" , if not specified then it is just a fabric network
+
+# docker-prereqs only required if not using the prepmac image
+#- import_playbook: playbooks/5-docker-prereqs.yaml
+
+# vm-prereqs required to allow the controller to be more secure interacting with the VMs
+# of not used it will continue to use password authentication (not so secure)
+#- import_playbook: playbooks/5-vm-prereqs.yaml
 
 - import_playbook: playbooks/10-common-prereqs.yaml
-  when: 'plays=="all" or ("prereqs" in plays)'
 
-- import_playbook: playbooks/15-deploy-prometheus.yaml
-  when: 'plays=="all" or ("deployprom" in plays)'
+- import_playbook: playbooks/13-token-prereqs.yaml
+  when: 'plays=="fungible"'
 
 - import_playbook: playbooks/20-checkout-and-build-fabric.yaml
-  when: 'plays=="all" or ("checkoutfabric" in plays)'
+
+- import_playbook: playbooks/22-checkout-and-build-idemixgen.yaml
+  when: 'plays=="fungible" or plays=="atsa"'
+
+- import_playbook: playbooks/25-checkout-and-build-fsc-nodes.yaml
+  when: 'plays=="fungible" or plays=="atsa" or plays=="iou"'
 
 - import_playbook: playbooks/30-checkout-chaincode.yaml
-  when: 'plays=="all" or ("checkoutchain" in plays)'
 
 - import_playbook: playbooks/40-generate-crypto-fabric.yaml
-  when: 'plays=="all" or ("gencrypto" in plays)'
 
-- import_playbook: playbooks/45-copy-crypto.yaml
-  when: 'plays=="all" or ("copycrypto" in plays)'
+- import_playbook: playbooks/41-generate-crypto-fsc.yaml
+  when: 'plays=="fungible" or plays=="atsa" or plays=="iou"'
 
-- import_playbook: playbooks/47-deploy-caliper.yaml
-  when: 'plays=="all" or ("caliper" in plays)'
+- import_playbook: playbooks/42-generate-crypto-idemix.yaml
+  when: 'plays=="fungible" or plays=="atsa"'
+
+- import_playbook: playbooks/43-generate-crypto-token.yaml
+  when: 'plays=="fungible"'
 
 - import_playbook: playbooks/50-generate-channel.yaml
-  when: 'plays=="all" or ("genchan" in plays)'
+
+- import_playbook: playbooks/52-generate-fsc-core.yaml
+  when: 'plays=="fungible" or plays=="atsa" or plays=="iou"'
+
+- import_playbook: playbooks/53-append-token-core.yaml
+  when: 'plays=="fungible"'
 
 - import_playbook: playbooks/55-restart-fabric-nodes.yaml
-  when: 'plays=="all" or ("restartnodes" in plays)'
 
 - import_playbook: playbooks/60-create-channels.yaml
-  when: 'plays=="all" or ("createchan" in plays)'
 
 - import_playbook: playbooks/65-create-anchors.yaml
-  when: 'plays=="all" or ("createanch" in plays)'
+
+- import_playbook: playbooks/67-pp-into-chaincode.yaml
+  when: 'plays=="fungible"'
 
 - import_playbook: playbooks/70-lscc-deploy-chaincode.yaml
-  when: 'plays=="all" or ("deploycc" in plays)'
-
